presenter: added button to toolbar to create slides for messages from the audience

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -1,5 +1,6 @@
 slides.notes = Notizen
 slides.latex = LaTeX
+slides.audience.message = H\u00F6rsaalmeldung
 slides.message = Nachricht
 slides.messages = Nachrichten
 slides.no.messages = Keine Nachrichten
