--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -1,5 +1,6 @@
 slides.notes = Notes
 slides.latex = LaTeX
+slides.audience.message = Message from the auditorium
 slides.message = Message
 slides.messages = Messages
 slides.no.messages = No messages
