--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -44,3 +44,4 @@ toolbar.stream.stop.tooltip = Stream stoppen
 toolbar.stream.microphone.tooltip = Mikrofon f\u00FCr Stream ein/ausschalten
 toolbar.stream.camera.tooltip = Kamera f\u00FCr Stream ein/ausschalten
 toolbar.select.quiz.tooltip = Quiz stellen
+toolbar.audience.message.tooltip = Meldung aus dem H\u00F6rsaal
