--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -44,3 +44,4 @@ toolbar.stream.stop.tooltip = Stop stream
 toolbar.stream.microphone.tooltip = Switch microphone on/off for stream
 toolbar.stream.camera.tooltip = Switch camera on/off for stream
 toolbar.select.quiz.tooltip = Start Quiz
+toolbar.audience.message.tooltip = Message from the auditorium
