--- a/lect-presenter-swing/src/main/resources/views/template-settings/template-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/template-settings/template-settings_de_DE.properties
@@ -3,3 +3,5 @@ template.settings.hall.message = H\u00F6rsaalmeldung
 template.settings.quiz = Quiz
 template.settings.whiteboard = Whiteboard
 template.settings.load.error = Dokument konnte nicht geladen werden
+template.settings.open = \u00D6ffnen
+template.settings.reset = Zur\u00FCcksetzen
