--- a/lect-presenter-swing/src/main/resources/views/template-settings/template-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/template-settings/template-settings_en_US.properties
@@ -3,3 +3,5 @@ template.settings.hall.message = Lecture Hall Message
 template.settings.quiz = Quiz
 template.settings.whiteboard = Whiteboard
 template.settings.load.error = Document could not be loaded
+template.settings.open = Open
+template.settings.reset = Reset
