presenter: send chat messages

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -2,6 +2,7 @@ slides.notes = Notizen
 slides.latex = LaTeX
 slides.audience.message = H\u00F6rsaalmeldung
 slides.message = Nachricht
+slides.message.send = Senden
 slides.messages = Nachrichten
 slides.no.messages = Keine Nachrichten
 slides.slide.preview = Folienvorschau
