--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -2,6 +2,7 @@ slides.notes = Notes
 slides.latex = LaTeX
 slides.audience.message = Message from the auditorium
 slides.message = Message
+slides.message.send = Send
 slides.messages = Messages
 slides.no.messages = No messages
 slides.slide.preview = Slides preview
