presenter: fixed chat message parsing

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -60,3 +60,4 @@ open.page.uri.error = Der Link konnte nicht ge\u00f6ffnet werden
 text.message = Nachricht
 text.message.time = Datum / Uhrzeit
 text.messages = Textnachrichten
+text.message.privately = Privat
