--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -60,3 +60,4 @@ open.page.uri.error = The link could not be opened
 text.message = Message
 text.message.time = Date / Time
 text.messages = Text Messages
+text.message.privately = Privately
