presenter: added course participants list

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -9,17 +9,21 @@ menu.exit = Beenden
 menu.undo = R\u00FCckgangig
 menu.redo = Wiederherstellen
 menu.contents = Inhaltsverzeichnis
+menu.participants = Teilnehmer:innen
 menu.fullscreen = Vollbild
 menu.advanced.settings = Erweiterte Einstellungen
 menu.toolbar.customize = Toolbar anpassen
 menu.external.windows = Externe Fenster
 menu.external.messages = Nachrichten
 menu.external.messages.disconnected = Nachrichten (Bildschirm getrennt)
+menu.external.participants = Teilnehmer:innen
+menu.external.participants.disconnected = Teilnehmer:innen (Bildschirm getrennt)
 menu.external.slide.preview = Folienvorschau
 menu.external.slide.preview.disconnected = Folienvorschau (Bildschirm getrennt)
 menu.external.speech = Redebeitrag
 menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
-menu.messages.position = Nachrichtenleistenposition
+menu.messages.position = Position von Nachrichten
+menu.participants.position = Position von Teilnehmer:innen
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
