--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -9,17 +9,21 @@ menu.exit = Quit
 menu.undo = Undo
 menu.redo = Redo
 menu.contents = Table of Contents
+menu.participants = Participants
 menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
 menu.toolbar.customize = Customize toolbar
 menu.external.windows = External windows
 menu.external.messages = Messages
 menu.external.messages.disconnected = Messages (Display disconnected)
+menu.external.participants = Participants
+menu.external.participants.disconnected = Participants (Display disconnected)
 menu.external.slide.preview = Slide preview
-menu.external.slide.preview.disconnected = Slide preview  (Display disconnected)
+menu.external.slide.preview.disconnected = Slide preview (Display disconnected)
 menu.external.speech = Speech
-menu.external.speech.disconnected = Speech  (Display disconnected)
-menu.messenger.position = Message bar position
+menu.external.speech.disconnected = Speech (Display disconnected)
+menu.messages.position = Messages position
+menu.participants.position = Participants position
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
