--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -5,6 +5,8 @@ slides.message = Nachricht
 slides.message.send = Senden
 slides.messages = Nachrichten
 slides.no.messages = Keine Nachrichten
+slides.participants = Teilnehmer:innen
+slides.no.participants = Keine Teilnehmer:innen
 slides.slide.preview = Folienvorschau
 slides.speech = Redebeitrag
 slides.currently.no.speech = Aktuell kein Redebeitrag
