--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -5,6 +5,8 @@ slides.message = Message
 slides.message.send = Send
 slides.messages = Messages
 slides.no.messages = No messages
+slides.participants = Participants
+slides.no.participants = No participants
 slides.slide.preview = Slides preview
 slides.speech = Speech
 slides.currently.no.speech = Currently no speach
