--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -61,3 +61,7 @@ text.message = Message
 text.message.time = Date / Time
 text.messages = Text Messages
 text.message.privately = Privately
+
+role.organisator = Organisator
+role.co-organisator = Co-Organisator
+role.participant = Participant
