swing: sorted ParticipantList

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -65,3 +65,6 @@ text.message.privately = Privat
 role.organisator = Organisator:in
 role.co-organisator = Co-Organisator:in
 role.participant = Teilnehmer:in
+
+presence.type.classroom = H\u00f6rsaal
+presence.type.stream = Stream
