--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -65,3 +65,6 @@ text.message.privately = Privately
 role.organisator = Organisator
 role.co-organisator = Co-Organisator
 role.participant = Participant
+
+presence.type.classroom = Classroom
+presence.type.stream = Stream
