presenter-swing: changed private label in MessageView

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -61,6 +61,7 @@ text.message = Nachricht
 text.message.time = Datum / Uhrzeit
 text.messages = Textnachrichten
 text.message.privately = Privat
+text.message.to.organisators = (Co-)Organisator:innen
 
 role.organisator = Organisator:in
 role.co-organisator = Co-Organisator:in
