--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -61,6 +61,7 @@ text.message = Message
 text.message.time = Date / Time
 text.messages = Text Messages
 text.message.privately = Privately
+text.message.to.organisators = (Co-)Organisators
 
 role.organisator = Organisator
 role.co-organisator = Co-Organisator
