presenter-swing: show sender and recipient in received messages

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -60,7 +60,10 @@ open.page.uri.error = Der Link konnte nicht ge\u00f6ffnet werden
 text.message = Nachricht
 text.message.time = Datum / Uhrzeit
 text.messages = Textnachrichten
+text.message.me = Ich
 text.message.privately = Privat
+text.message.recipient = {0} an {1}
+text.message.to.me = mich
 text.message.to.organisators = (Co-)Organisator:innen
 
 role.organisator = Organisator:in
