--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -60,7 +60,10 @@ open.page.uri.error = The link could not be opened
 text.message = Message
 text.message.time = Date / Time
 text.messages = Text Messages
+text.message.me = Me
 text.message.privately = Privately
+text.message.recipient = {0} to {1}
+text.message.to.me = me
 text.message.to.organisators = (Co-)Organisators
 
 role.organisator = Organisator
