presenter-swing: abbreviate private organisator label in MessageView

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -65,6 +65,7 @@ text.message.privately = Privat
 text.message.recipient = {0} an {1}
 text.message.to.me = mich
 text.message.to.organisators = (Co-)Organisator:innen
+text.message.to.organisators.short = Org.
 
 role.organisator = Organisator:in
 role.co-organisator = Co-Organisator:in
