--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -65,6 +65,7 @@ text.message.privately = Privately
 text.message.recipient = {0} to {1}
 text.message.to.me = me
 text.message.to.organisators = (Co-)Organisators
+text.message.to.organisators.short = Org.
 
 role.organisator = Organisator
 role.co-organisator = Co-Organisator
