presenter: added screen-share capability

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -31,6 +31,7 @@ recording.pause.error = Aufzeichnung konnte nicht pausiert werden
 stream.starting = Der Stream wird gestartet
 stream.start.error = Stream konnte nicht gestartet werden
 stream.stop.error = Stream konnte nicht gestoppt werden
+stream.screen.share.error = Bildschirm konnte nicht geteilt werden
 stream.camera.error.title = Kamerafehler
 stream.camera.error.message = Die Kamera \u00AB{0}\u00BB ist f\u00fcr den Stream nicht verf\u00fcgbar. Stellen Sie sicher, dass keine andere Anwendung auf diese Kamera zugreift.
 stream.closed.by.remote.host = Der Stream wurde vom entfernten Host geschlossen
