--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -39,6 +39,7 @@ toolbar.recording.start.tooltip = Aufnahme starten
 toolbar.recording.stop.tooltip = Aufnahme stoppen
 toolbar.recording.pause.tooltip = Aufnahme pausieren
 toolbar.grid.tooltip = Gitternetz ein/ausschalten
+toolbar.stream.screen.share.start.tooltip = Bildschirm teilen
 toolbar.stream.start.tooltip = Stream starten
 toolbar.stream.stop.tooltip = Stream stoppen
 toolbar.stream.microphone.tooltip = Mikrofon f\u00FCr Stream ein/ausschalten
