--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -39,6 +39,7 @@ toolbar.recording.start.tooltip = Start recording
 toolbar.recording.stop.tooltip = Stop recording
 toolbar.recording.pause.tooltip = Pause recording
 toolbar.grid.tooltip = Switch grid on/off
+toolbar.stream.screen.share.start.tooltip = Share screen
 toolbar.stream.start.tooltip = Start stream
 toolbar.stream.stop.tooltip = Stop stream
 toolbar.stream.microphone.tooltip = Switch microphone on/off for stream
