--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -31,6 +31,7 @@ recording.pause.error = Recording could not be paused
 stream.starting = Starting stream
 stream.start.error = Stream could not be started
 stream.stop.error = Stream could not be stopped
+stream.screen.share.error = Screen-sharing could not be started
 stream.camera.error.title = Camera failure
 stream.camera.error.message = The camera \u00AB{0}\u00BB is not available for streaming. Make sure that no other application is accessing this camera.
 stream.closed.by.remote.host = Stream was closed by the remote host
