--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,3 +1,7 @@
 stream.settings.access.token = Access Token
 stream.settings.server.name = Server
 stream.settings.web.api = Web API
+stream.settings.screen.share = Screen Sharing
+stream.settings.screen.share.profile = Profile
+stream.settings.screen.share.profile.still = Still Image
+stream.settings.screen.share.profile.motion = Motion Image
