presenter-api: added missing localisation to screen-share buttons

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -38,6 +38,10 @@ stream.closed.by.remote.host = Der Stream wurde vom entfernten Host geschlossen
 stream.closed.by.remote.host.title = Stream beendet
 stream.profile.new = Neues Profil
 
+screen.share.start = Bildschirmfreigabe starten
+screen.share.suspend = Bildschirmfreigabe anhalten
+screen.share.stop = Bildschirmfreigabe beenden
+
 quiz = Quiz
 quiz.answers = Antworten
 quiz.options = Optionen
