--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -38,6 +38,10 @@ stream.closed.by.remote.host = Stream was closed by the remote host
 stream.closed.by.remote.host.title = Stream ended
 stream.profile.new = New Profile
 
+screen.share.start = Share screen
+screen.share.suspend = Pause screen sharing
+screen.share.stop = Stop screen sharing
+
 quiz = Quiz
 quiz.answers = Answers
 quiz.options = Options
