presenter: create quizzes faster with new button and accelerators

--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_de_DE.properties
@@ -13,4 +13,6 @@ create.quiz.option.up.tooltip = Quizoption nach oben verschieben
 create.quiz.option.down.tooltip = Quizoption nach unten verschieben
 create.quiz.save = Quiz speichern
 create.quiz.save.tooltip = Quiz speichern und beim Editieren fortfahren
+create.quiz.save.next = Quiz speichern & Neues erstellen
+create.quiz.save.next.tooltip = Quiz speichern und nächste Frage eingeben
 create.quiz.start = Quiz stellen
