--- a/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/create-quiz/create-quiz_en_US.properties
@@ -13,4 +13,6 @@ create.quiz.option.up.tooltip = Move quiz option up
 create.quiz.option.down.tooltip = Move quiz option down
 create.quiz.save = Save quiz
 create.quiz.save.tooltip = Save quiz and continue with editing
+create.quiz.save.next = Save quiz & create new one
+create.quiz.save.next.tooltip = Save the quiz and create a new question
 create.quiz.start = Start quiz
