presenter: introduced ScreenShareContext to dynamically adjust screen-share settings

--- a/lect-presenter-swing/src/main/resources/views/start-screen-sharing/start-screen-sharing_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-screen-sharing/start-screen-sharing_en_US.properties
@@ -2,3 +2,4 @@ start.screen.sharing.start = Start
 start.screen.sharing.screen = Screen
 start.screen.sharing.screens = Screens
 start.screen.sharing.windows = Windows
+start.screen.sharing.windows.info = Minimized windows are not displayed here
