--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -3,5 +3,5 @@ stream.settings.server.name = Server
 stream.settings.web.api = Web-API
 stream.settings.screen.share = Bildschirmfreigabe
 stream.settings.screen.share.profile = Profil
-stream.settings.screen.share.profile.still = Standbild
-stream.settings.screen.share.profile.motion = Bewegtes Bild
+stream.settings.screen.share.profile.still = Standbild (niedrige Bildrate)
+stream.settings.screen.share.profile.motion = Bewegtes Bild (hohe Bildrate)
