--- a/lect-presenter-swing/src/main/resources/views/start-screen-sharing/start-screen-sharing_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-screen-sharing/start-screen-sharing_de_DE.properties
@@ -2,3 +2,4 @@ start.screen.sharing.start = Start
 start.screen.sharing.screen = Bildschirm
 start.screen.sharing.screens = Bildschirme
 start.screen.sharing.windows = Fenster
+start.screen.sharing.windows.info = Minimierte Fenster werden hier nicht angezeigt
