--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -3,5 +3,5 @@ stream.settings.server.name = Server
 stream.settings.web.api = Web API
 stream.settings.screen.share = Screen Sharing
 stream.settings.screen.share.profile = Profile
-stream.settings.screen.share.profile.still = Still Image
-stream.settings.screen.share.profile.motion = Motion Image
+stream.settings.screen.share.profile.still = Still Image (low frame rate)
+stream.settings.screen.share.profile.motion = Motion Image (high frame rate)
