presenter-api: show notification if the screen source is no longer available

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -38,9 +38,11 @@ stream.closed.by.remote.host = Der Stream wurde vom entfernten Host geschlossen
 stream.closed.by.remote.host.title = Stream beendet
 stream.profile.new = Neues Profil
 
+screen.share = Bildschirmfreigabe
 screen.share.start = Bildschirmfreigabe starten
 screen.share.suspend = Bildschirmfreigabe anhalten
 screen.share.stop = Bildschirmfreigabe beenden
+screen.share.stopped = Die Bildschirmfreigabe wurde beendet, da das Fenster oder der Bildschirm nicht mehr verf\u00fcgbar ist
 
 quiz = Quiz
 quiz.answers = Antworten
