presenter: (de)activate audio noise suppression in audio settings

--- a/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_de_DE.properties
@@ -4,6 +4,7 @@ sound.settings.playback.device = Ausgabeger\u00e4t
 sound.settings.level = Pegel
 sound.settings.volume = Lautst\u00e4rke
 sound.settings.noise.suppression = Rauschunterdr\u00fcckung
+sound.settings.noise.suppression.enable = Aktivieren
 sound.settings.noise.suppression.moderate = Moderat
 sound.settings.noise.suppression.low = Niedrig
 sound.settings.noise.suppression.high = Hoch
