--- a/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/sound-settings/sound-settings_en_US.properties
@@ -4,6 +4,7 @@ sound.settings.playback.device = Output device
 sound.settings.level = Level
 sound.settings.volume = Volume
 sound.settings.noise.suppression = Noise suppression
+sound.settings.noise.suppression.enable = Activate
 sound.settings.noise.suppression.moderate = Moderate
 sound.settings.noise.suppression.low = Low
 sound.settings.noise.suppression.high = High
