editor-api: added feature to replace multiple slides at once #253

--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace_de_DE.properties
@@ -1,6 +1,12 @@
 page.replace.title = Seite ersetzen
 page.replace.button = Ersetzen
+page.replace.abort = Abbrechen
+page.replace.confirm = Änderungen speichern
 page.replace.page.current = Aktuelle Seite
 page.replace.page.new = Neue Seite
 page.replace.previous = Vorherige Seite
 page.replace.next = N\u00e4chste Seite
+page.replace.currentPage = Ausgewählte Seite ersetzen
+page.replace.allPages = Alle Seiten ersetzen
+page.replace.currentPage.info = Diese Option wählt nach dem Ersetzen automatisch die nächste Seite beider Dokumente aus.
+page.replace.allPages.info = Diese Option kann nur ausgewählt werden, wenn beide Dokumente die gleiche Seitenanzahl haben.
