--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace_en_US.properties
@@ -1,6 +1,12 @@
 page.replace.title = Replace page
 page.replace.button = Replace
+page.replace.abort = Discard
+page.replace.confirm = Confirm changes
 page.replace.page.current = Current page
 page.replace.page.new = New page
 page.replace.previous = Previous page
 page.replace.next = Next page
+page.replace.currentPage = Replace Selected Page
+page.replace.allPages = Replace All Pages
+page.replace.currentPage.info = This option replaces the selected page and afterwards selects the next page of both documents.
+page.replace.allPages.info = This option can only be selected, if both documents contain the same number of pages.
