core: added documentation
editor-api: fixed freeze from running method in UI thread and made move page notification more precise by adding exact page duration

javafx: added delta for better page removal and added time updates when moving pages

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -2,7 +2,7 @@ cut.recording.error = Aufzeichnung konnte nicht geschnitten werden
 delete.page.error = Seite konnte nicht entfernt werden
 replace.page.error = Seite konnte nicht ersetzt werden
 move.page.duration.low.title = Information: Kurze Seitenanzeigedauer
-move.page.duration.low.text = Die Seite {0} wird nur für weniger als 3 Sekunden angezeigt.
+move.page.duration.low.text = Die Seite {0} wird nur für {1} Sekunden angezeigt.
 hide.page.error = Seite konnte nicht entfernt werden
 hide.page.notification.title = Seite entfernen
 hide.page.notification.text = Wollen Sie die Seite {0} entfernen, ohne die Audiospur zu verändern?
