core: added new generic notification pane, which can be used for yes/no notifications (ConfirmationNotificationView)
editor-api: added feature #612 to be able to move page timestamps from the event timeline

editor-fx: added binding for new ConfirmationNotificationView

javafx: changed the EventTimeline from using a canvas to using UI elements to be able to interact with them

presenter-api: removed commented out code

web-api: added missing PathParam

--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -9,6 +9,7 @@ button.end = End
 button.reset = Reset
 button.open = Open
 button.close = Close
+button.confirm = Confirm
 button.remove = Remove
 button.discard = Discard
 button.processed = Processed
