--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -9,6 +9,7 @@ button.end = Beenden
 button.reset = Zur\u00fccksetzen
 button.open = \u00d6ffnen
 button.close = Schlie\u00dfen
+button.confirm = Zustimmen
 button.remove = Entfernen
 button.discard = Verwerfen
 button.processed = Bearbeitet
