presenter: improved UI when handling stream reconnects

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -38,6 +38,9 @@ menu.recording.start = Start recording
 menu.recording.stop = Stop recording
 menu.stream.start = Start stream
 menu.stream.stop = Stop stream
+menu.stream.online = Stream online
+menu.stream.offline = Stream offline
+menu.stream.slow = Slow stream connection
 menu.stream.microphone.start = Turn microphone on for stream
 menu.stream.microphone.stop = Turn microphone off for stream
 menu.stream.camera.start = Turn camera on for stream
