--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -38,6 +38,9 @@ menu.recording.start = Aufzeichnung starten
 menu.recording.stop = Aufzeichnung stoppen
 menu.stream.start = Stream starten
 menu.stream.stop = Stream stoppen
+menu.stream.online = Stream online
+menu.stream.offline = Stream offline
+menu.stream.slow = Langsame Stream-Verbindung
 menu.stream.microphone.start = Mikrofon f\u00FCr Stream einschalten
 menu.stream.microphone.stop = Mikrofon f\u00FCr Stream ausschalten
 menu.stream.camera.start = Kamera f\u00FCr Stream einschalten
