Feature/move next slide event (#753)
* editor-api: added feature to replace multiple slides at once #253

* editor-api: added javadoc #253

* editor-api: added javadoc #253

* core: added new generic notification pane, which can be used for yes/no notifications (ConfirmationNotificationView)

editor-api: added feature #612 to be able to move page timestamps from the event timeline

editor-fx: added binding for new ConfirmationNotificationView

javafx: changed the EventTimeline from using a canvas to using UI elements to be able to interact with them

presenter-api: removed commented out code

web-api: added missing PathParam

* core: added documentation

editor-api: fixed freeze from running method in UI thread and made move page notification more precise by adding exact page duration

javafx: added delta for better page removal and added time updates when moving pages

* editor: fixed word highlighting events not appearing on the event timeline #755

---------

Co-authored-by: Alex Andres <58339654+devopvoid@users.noreply.github.com>

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,6 +1,13 @@
 cut.recording.error = Aufzeichnung konnte nicht geschnitten werden
 delete.page.error = Seite konnte nicht entfernt werden
 replace.page.error = Seite konnte nicht ersetzt werden
+move.page.duration.low.title = Information: Kurze Seitenanzeigedauer
+move.page.duration.low.text = Die Seite {0} wird nur für {1} Sekunden angezeigt.
+hide.page.error = Seite konnte nicht entfernt werden
+hide.page.notification.title = Seite entfernen
+hide.page.notification.text = Wollen Sie die Seite {0} entfernen, ohne die Audiospur zu verändern?
+hide.page.notification.confirm = Entfernen
+hide.page.notification.close = Abbrechen
 export.audio = Audio exportieren
 export.audio.error = Audio konnte nicht exportiert werden
 import.audio.error = Audio konnte nicht importiert werden
