--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,6 +1,13 @@
 cut.recording.error = Recording could not be cut
 delete.page.error = Page could not be deleted
 replace.page.error = Page could not be replaced
+move.page.duration.low.title = Information: Short Page Duration
+move.page.duration.low.text = The page {0} will be shown for only {1} seconds.
+hide.page.error = Page could not be removed
+hide.page.notification.title = Remove Page
+hide.page.notification.text = Do you want to remove page {0} without changing the audio?
+hide.page.notification.confirm = Remove
+hide.page.notification.close = Discard
 export.audio = Export audio
 export.audio.error = Audio could not be exported
 import.audio.error = Audio could not be imported
