presenter: added toolbar button to disable user input in slide-preview

--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -29,6 +29,7 @@ toolbar.latex.tooltip = LaTeX-Werkzeug ausw\u00E4hlen
 toolbar.text.tooltip = Textwerkzeug ausw\u00E4hlen
 toolbar.text.select.tooltip = Textauswahlwerkzeug ausw\u00E4hlen
 toolbar.clear.tooltip = L\u00F6sche alle Texte und Linien
+toolbar.disable.preview.tooltip = Selektion in der Vorschauleiste ein/ausschalten
 toolbar.extend.tooltip = Zeichenbereich erweitern
 toolbar.whiteboard.tooltip = Whiteboard \u00F6ffnen
 toolbar.displays.tooltip = Ausgabe auf externe Ausgabemedien ein/ausschalten
