--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -29,6 +29,7 @@ toolbar.latex.tooltip = Select LaTeX tool
 toolbar.text.tooltip = Select text tool
 toolbar.text.select.tooltip = Select text selection tool
 toolbar.clear.tooltip = Delete all annotations
+toolbar.disable.preview.tooltip = Enable/disable selection in the preview bar
 toolbar.extend.tooltip = Extend drawing area
 toolbar.whiteboard.tooltip = Open whiteboard
 toolbar.displays.tooltip = Switch output to external displays on/off
