editor-api: added feature and tests to split recordings #2
editor-fx: added new views

core: added a new method to PresenterTest, added copy constructor to Recording

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -21,6 +21,7 @@ recording.render.error = Die Aufzeichnung konnte nicht gerendert werden
 recording.render.finished = Das Rendern der Aufzeichnung ist abgeschlossen
 recording.undo.error = \u00c4nderungen in der Aufzeichnung konnten nicht r\u00fcckg\u00e4ngig gemacht werden
 recording.redo.error = \u00c4nderungen in der Aufzeichnung konnten nicht wiederholt werden
+recording.split.error = Die Aufzeichnung konnte nicht aufgeteilt werden
 noise.reduction.error = Rauschunterdr\u00fcckung ist fehlgeschlagen
 noise.reduction.canceled = Rauschunterdr\u00fcckung wurde abgebrochen
 noise.reduction.cancel.error = Rauschunterdr\u00fcckung konnte nicht abgebrochen werden
