--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -21,6 +21,7 @@ recording.render.error = Recording could not be rendered
 recording.render.finished = Rendering of the recording is complete
 recording.undo.error = Changes in the recording could not be undone
 recording.redo.error = Changes in the recording could not be repeated
+recording.split.error = Recording could not be split
 noise.reduction.error = Noise reduction failed
 noise.reduction.canceled = Noise reduction has been canceled
 noise.reduction.cancel.error = Noise reduction could not be canceled
