--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
@@ -5,6 +5,7 @@ media.collapse.selection = Collapse selection
 media.delete.page = Delete current page
 media.replace.page = Replace current page
 media.import.recording = Import recording
+media.split.recording = Split recording
 media.volume.adjust = Adjust volume
 media.zoom.in = Enlarge timeline
 media.zoom.out = Shrink timeline
