--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -60,3 +60,5 @@ menu.bookmarks.goto = Go to bookmark
 menu.slide.actions = Slide Links
 menu.log = Log
 menu.about = About
+menu.stopwatch.stop = reset stopwatch
+menu.stopwatch.pause = start/pause stopwatch
