presenter: added a page selection delay for the ThumbPanel

--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
@@ -2,7 +2,7 @@ general.settings.annotations.save = Bei nicht abgespeicherten Annotationen beim 
 general.settings.extended.space = Erweiterter Zeichenbereich
 general.settings.font.size = Gr\u00f6\u00dfe der Bedienelemente
 general.settings.fullscreen.hide.extended = Men\u00fcleiste und andere Bedienelemente im Vollbildmodus ausblenden
-general.settings.disable.preview = Folienauswahl in der Vorschauleiste durch Benutzereingabe deaktivieren
+general.settings.page.select.delay = Folienauswahl in der Vorschauleiste verz\u00F6gern (in ms)
 general.settings.theme = Theme
 general.settings.language = Sprache
 general.settings.language.notify.title = Anzeigesprache ge\u00e4ndert
