--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
@@ -2,7 +2,7 @@ general.settings.annotations.save = Save annotations when closing
 general.settings.extended.space = Extended drawing area
 general.settings.font.size = Size of the controls
 general.settings.fullscreen.hide.extended = Hide the menu bar and other controls in full screen mode
-general.settings.disable.preview = Disable slide selection in the preview bar by user input
+general.settings.page.select.delay = Delay slide selection in the preview bar by (ms)
 general.settings.theme = Theme
 general.settings.language = Language
 general.settings.language.notify.title = Display language changed
