presenter-swing: added an option to change the position of the slide preview

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -24,6 +24,7 @@ menu.external.speech = Speech
 menu.external.speech.disconnected = Speech (Display disconnected)
 menu.messages.position = Messages position
 menu.participants.position = Participants position
+menu.preview.position = Slide preview position
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
