--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -22,8 +22,9 @@ menu.external.slide.preview = Folienvorschau
 menu.external.slide.preview.disconnected = Folienvorschau (Bildschirm getrennt)
 menu.external.speech = Redebeitrag
 menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
-menu.messages.position = Position von Nachrichten
-menu.participants.position = Position von Teilnehmer:innen
+menu.messages.position = Position der Nachrichten
+menu.participants.position = Position der Teilnehmer:innen
+menu.preview.position = Position der Folienvorschau
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
