editor-api: fixed timeline marker positioning after splitting a recording editor-fx: fixed words, grammar and word positioning
Fixes all issues mentioned in #758

--- a/lect-editor-fx/src/main/resources/views/recording-split/recording-split_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/recording-split/recording-split_de_DE.properties
@@ -1,7 +1,11 @@
 recording.split.button.abort = Abbrechen
 recording.split.button.save = Speichern
-recording.split.info = Sie sind dabei die Aufzeichnung an der durch den Zeitpunktmarker ausgewählten Zeitpunkt aufzuteilen.\nBitte wählen Sie den Abschnitt, aus den Sie in eine neue Aufzeichnungsdatei abspeichern wollen.
+recording.split.info = Sie sind dabei die Aufzeichnung an der durch den Zeitpunktmarker ausgewählten Zeitpunkt aufzuteilen.\nBitte wählen Sie den Abschnitt aus, den Sie in eine neue Aufzeichnungsdatei auslagern wollen.
 recording.split.info.remove = Der ausgewählte Abschnitt wird nach dem Speichern aus der aktuellen Aufzeichnung entfernt.
-recording.split.radio.begin = Linker Abschnitt: {0} - {1}
-recording.split.radio.end = Rechter Abschnitt: {0} - {1}
-recording.split.title = Aufnahme Aufteilen
+recording.split.radio.begin = Linker Abschnitt: 
+recording.split.radio.begin.time = {0} - {1}
+recording.split.radio.begin.tooltip = Linker Abschnitt:  {0} - {1}
+recording.split.radio.end = Rechter Abschnitt: 
+recording.split.radio.end.time = {0} - {1}
+recording.split.radio.end.tooltip = Rechter Abschnitt: {0} - {1}
+recording.split.title = Aufzeichnung aufteilen
