--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -62,3 +62,4 @@ menu.log = Log
 menu.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
+menu.stopwatch.config = Stopwatch configuration
