--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -61,3 +61,6 @@ menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
 menu.log = Log
 menu.about = \u00DCber
+menu.stopwatch.stop = Stoppuhr zurücksetzen
+menu.stopwatch.pause = Stoppuhr Starten/Anhalten
+menu.stopwatch.config = Stoppuhr Einstellungen
