added view to show text annotations as notes

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -14,6 +14,8 @@ menu.fullscreen = Vollbild
 menu.advanced.settings = Erweiterte Einstellungen
 menu.toolbar.customize = Toolbar anpassen
 menu.external.windows = Externe Fenster
+menu.external.notes = Notizen
+menu.external.notes.disconnected = Notizen (Bildschirm getrennt)
 menu.external.messages = Nachrichten
 menu.external.messages.disconnected = Nachrichten (Bildschirm getrennt)
 menu.external.participants = Teilnehmer:innen
@@ -23,6 +25,7 @@ menu.external.slide.preview.disconnected = Folienvorschau (Bildschirm getrennt)
 menu.external.speech = Redebeitrag
 menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
 menu.messages.position = Position der Nachrichten
+menu.notes.position = Position der Notizen
 menu.participants.position = Position der Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
 menu.left = Links
