--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -14,6 +14,7 @@ menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
 menu.toolbar.customize = Customize toolbar
 menu.external.windows = External windows
+menu.external.annotations = Notes
 menu.external.messages = Messages
 menu.external.messages.disconnected = Messages (Display disconnected)
 menu.external.participants = Participants
@@ -23,6 +24,7 @@ menu.external.slide.preview.disconnected = Slide preview (Display disconnected)
 menu.external.speech = Speech
 menu.external.speech.disconnected = Speech (Display disconnected)
 menu.messages.position = Messages position
+menu.notes.position = Notes position
 menu.participants.position = Participants position
 menu.preview.position = Slide preview position
 menu.left = Left
