editor: minor improvements for the page replacement dialog #761

--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace_en_US.properties
@@ -1,7 +1,7 @@
 page.replace.title = Replace page
 page.replace.button = Replace
 page.replace.abort = Discard
-page.replace.confirm = Confirm changes
+page.replace.confirm = Apply
 page.replace.page.current = Current page
 page.replace.page.new = New page
 page.replace.previous = Previous page
