--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace_de_DE.properties
@@ -1,7 +1,7 @@
 page.replace.title = Seite ersetzen
 page.replace.button = Ersetzen
 page.replace.abort = Abbrechen
-page.replace.confirm = Änderungen speichern
+page.replace.confirm = \u00DCbernehmen
 page.replace.page.current = Aktuelle Seite
 page.replace.page.new = Neue Seite
 page.replace.previous = Vorherige Seite
