editor: minor improvements for the document split dialog #758

--- a/lect-editor-fx/src/main/resources/views/recording-split/recording-split_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/recording-split/recording-split_de_DE.properties
@@ -1,6 +1,6 @@
 recording.split.button.abort = Abbrechen
 recording.split.button.save = Speichern
-recording.split.info = Sie sind dabei die Aufzeichnung an der durch den Zeitpunktmarker ausgewählten Zeitpunkt aufzuteilen.\nBitte wählen Sie den Abschnitt aus, den Sie in eine neue Aufzeichnungsdatei auslagern wollen.
+recording.split.info = Sie sind dabei die Aufzeichnung an dem durch den Zeitpunktmarker ausgewählten Zeitpunkt aufzuteilen.\nBitte wählen Sie den Abschnitt aus, den Sie in eine neue Aufzeichnungsdatei auslagern wollen.
 recording.split.info.remove = Der ausgewählte Abschnitt wird nach dem Speichern aus der aktuellen Aufzeichnung entfernt.
 recording.split.radio.begin = Linker Abschnitt: 
 recording.split.radio.begin.time = {0} - {1}
